package exercise.ex02.ex3_ex4;

public interface Observer {

    public abstract void update();

}
